# Cnlistor

./: CMakeLists.txt  README.md  update.md
docs/: doc.txt
include/: flex_common.h
scripts/: install.sh  uninstall.sh
src/: flex_hardware_info.cpp  flex_hardware_info.h  flex_package_info.h  flex_system_info.cpp  flex_system_info.h  main.cpp
tests/: test.txt
